# build-with-bazel

./: README.md  docker-compose.yaml  go.mod  okteto.yml  push.sh
app/: .oktetoignore  BUILD.bazel  MODULE.bazel  okteto.yaml  okteto.yml
bazel-cache/: deploy.sh  docker-compose.yaml  k8s.yaml  okteto.yaml
