module(
    name = "build_with_bazel",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_python", version = "0.31.0")

# Configure Python to use system interpreter instead of hermetic (fixes root user issue)
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
    ignore_root_user_error = True,
)

# Download & register a Go toolchain (pick your Go version)
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.4")

# Pull base image for OCI container
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    image = "gcr.io/distroless/static-debian12",
    digest = "sha256:cd64bec9cec257044ce3a8dd3620cf83b387920100332f2b041f19c4d2febf93",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64")
